<resources>
    <string name="app_name">SESHealthPatient</string>
    <string name="username_txt">Username</string>
    <string name="email_example_com">email@example.com</string>
    <string name="password_txt">Password</string>
    <string name="log_in_txt">Log In</string>
    <string name="login_activity_title">Log In</string>
    <string name="google_maps_API_key">AIzaSyAh0QVBsV-Q7zKg7CH1tSpthQacn-GoPsY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="patient_information">Patient Information</string>
    <string name="create_data_packet">Create Data Packet</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="record_video">Record Video</string>
    <string name="send_local_file">Send Local File</string>
    <string name="facilities_map">Facilities Map</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="age">age: </string>
    <string name="name">Name: </string>

    <string name="heartbeat">Heart Rate</string>
    <string name="default_text">000</string>
    <string name="unit">bpm</string>
    <string name="instruct">Gently place the tip of your finger on the camera to completely covers the lens.
It is not necessary to cover the flash. Hold your phone steady.</string>
    <string name="ideal_range">☺︎Ideal Resting Heartbeat Range</string>
    <string name="ideal_range_num">60 to 100 bpm</string>
    <string name="warning">Following ways can affect the accuracy of measurements</string>
    <string name="warning1">▹▹Pressing too hard on the lens</string>
    <string name="warning2">▹▹In poor lighting conditions</string>

    <string name="selected_file">A file is selected: %1$s</string>

    <array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </array>
    <string name="title_activity_view_upload">ViewUploadActivity</string>
</resources>
