<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="28dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:src="@drawable/heart" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="28dp"
            android:text="@string/name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:src="@drawable/heart" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bkgd_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="#INSTRUCTIONS#"
                android:textColor="@color/whiteColor"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="142sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/instruct"
                android:textSize="23sp"
                android:textColor="@color/whiteColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ideal_range"
                android:background="@drawable/button_edge"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="64sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ideal_range_num"
                android:background="@drawable/button_edge"
                android:textSize="35sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="33sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="#KIND REMIND#"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/warning"
                android:textSize="23sp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="33sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/warning1"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="33sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/warning2"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnMeasure"
        android:onClick="btnMeasureClick"
        android:layout_width="230dp"
        android:layout_height="50sp"
        android:text="Start Measuring"
        android:textSize="21sp" />

</LinearLayout>