<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HeartbeatMainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="28dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:src="@drawable/heart" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="28dp"
            android:text="@string/heartbeat"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:src="@drawable/heart" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="340dp"
        android:background="@color/whiteColor">

        <group2.seshealthpatient.RingView
            android:id="@+id/ringview"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerInParent="true"/>

        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="85dp"
                    android:layout_height="130dp">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/default_text"
                        android:textSize="45sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <group2.seshealthpatient.HeartbeatView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/unit"
                        android:textSize="30sp"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="1dp"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/action_retry"
        android:onClick="btnRetryClick"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/bkgd_corner"
        android:textColor="@color/whiteColor"
        android:textSize="21sp"
        android:text="try again"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/action_save"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/bkgd_corner"
        android:textColor="@color/whiteColor"
        android:textSize="21sp"
        android:text="save"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnGraph"
        android:onClick="btnGraphClick"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/bkgd_corner"
        android:textColor="@color/whiteColor"
        android:textSize="21sp"
        android:text="view graph"/>

</LinearLayout>